# playground

./: .gitignore  .gitmodules  .xbindkeysrc  CMakeLists.txt  README.md  cpointerarrayparam.c  cpreprocessor.c  dan  db.py  diff.py  familiarity.py  fib.py  gen_vim_syntax.py  git-aliases.txt  git-corpus.py  googlephotos.py  hex.cpp  index.html  leaf_grow.py  node-helpers.js  pdf.py  redirect.c  resistance-identifier.html  scope.py  sqlalchemy_play.py  sswcs.html  thrasher.py  timeout.py  timestamp.py  vi.txt  websocket.html  yield.py
applications/: cdkr  change-check.py  docker-registry-cleaner.py  docker.md  download.py  familiarity.py  git-corpus.py  googlephotos.py  leaf_grow.py  loop.py  matho.html  render_math.py  sswcs.html  storage-bins.py  tail.py  trello.py  whitelist-ip.py  wordle.py  ws.py
applications/dansmetal/: .gitignore  dansmetal.py  readme.txt
applications/express-grpc-mtls/: .gitignore  bird.proto  client.js  do.py  package-lock.json  package.json  server.js
applications/node-start/: README.md  __main__.py
applications/sqlalchemy-siphon/: __main__.py
atom/: config.cson  highlight.py
atom/highlight-syntax/: README.md  package.json
bluez/: common.hpp  go.py  lescan.cpp
buildbot/: go.py  log_time.py
buildbot/play-master-basedir/: master.cfg
c/: timestamp.h
c/cconst/: declarations.h
c/cnamespace/: CMakeLists.txt  hello.c
cnamespace/: hello.c  make.py  namespace.h
config/devicetree/: tx2-nx-imx477-dual.dts
config/rocketchat/: dark.css
ctypes/: CMakeLists.txt  hello.py  make.sh
ctypes/2class/: CMakeLists.txt  class.cpp  make.sh
ctypes/3cross/: CMakeLists.txt  a.cpp  b.cpp  make.sh
ctypes/4inherit/: CMakeLists.txt  polymorph.cpp
ctypes/5callback/: hello.c  hello.py  make.py
dansmetal/: example.py
dyad-chat/: chat.c
dyad-double/client/: CMakeLists.txt  client.cpp  client.hpp
dyad-double/main/: CMakeLists.txt  main.cpp
dyad-double/server/: CMakeLists.txt  server.cpp  server.hpp
dyad-dryad/: CMakeLists.txt  dryad.cpp  dryad.hpp
dyad/test/: build.py  test.c
elixir/legion/: README.md  go.py  mix.exs
git-tutorial/: foobar.py
install/raspberry-pi-3b/: gary.txt
interfaces/: audio.html  mailgun.py  sqlalchemy_play.py  websocket.html
interfaces/PDF.js/: go.py  pdf.html
interfaces/actix-web/: Cargo.toml
interfaces/alphavantage/: alphavantage.py
interfaces/atom/: highlight.py
interfaces/azure-active-directory-ruby-on-rails/: notes.txt
interfaces/bluez/: leadv.cpp
interfaces/buildbot/: .gitignore  go.py
interfaces/cv2/: combine.py  hconcat.py  prob.py  puttext.py  timelapse-preview.py  timelapse.py  timelapse.txt  webcam.py
interfaces/dbus/: 01_duplex.sh  02_dbus_launch_duplex.sh  03_send_handle.sh  04_dbus_launch_send_handle.sh  duplex.py  handle.py  send.py
interfaces/dyad/dyad-double/main/: CMakeLists.txt
interfaces/dyad/dyad-dryad/: CMakeLists.txt  dryad.cpp
interfaces/emscripten/: .gitignore  1-install.sh  2-activate.sh  3-verify.sh  4-hello.sh  5-sdl.sh  6-files.sh  7-optimize.sh  hello-files.c
interfaces/flask/: hello.py  log.py  method.py  num.py  param.py  waitress-serve.py
interfaces/gdsfactory/: .gitignore  hello.py  requirements.txt  route.py
interfaces/google-picker/: index.html  readme.txt
interfaces/gotham/: Cargo.toml
interfaces/grpc/: do.py  hello.proto
interfaces/grpc/rs-client/: Cargo.toml
interfaces/grpc/rs-client/src/: main.rs
interfaces/gstreamer/: cam-rpi.sh  filesrc.sh  install-rpi.sh  install.sh  (+8 more)
languages/: cs.txt
languages/python/ctypes/5callback/: CMakeLists.txt  hello.c  hello.py
languages/rust/serde_deserialize/: Cargo.toml
languages/rust/serde_deserialize/src/: main.rs
notes/: interpolate.py  linux-audio-settings.txt  mongo.md  mount.txt  openssl.md  postgres.md  sql.txt  tar.md  vi.md  vi.txt  wake-on-lan.txt
php/: PdfFormFill.php  ReplaceInFile.php  go.php
pycparser/: say.h
pyhash/: pretty_general_hash.py
pypackage/: go.py
python/: sqlalchemy_play.py  timestamp.py
pyunit/: main.py
tests/: gst-sync.py
(+350 files in other folders)
