[package]
name = "rs-client"
version = "0.1.0"
authors = ["Dan <daniel@x-matik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tokio = { version = "0.2.18", features = ["macros"] }
tonic = "0.2.0"

[build-dependencies]
tonic-build = "0.2.0"
