[package]
name = "serde_deserialize"
version = "0.1.0"
authors = ["Dan <daniel@x-matik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
